# meetup_site

./: README.md  pyproject.toml
meetup_site/: db.sqlite3  manage.py
meetup_site/meetup_site/: settings.py  urls.py
meetup_site/meetups/: admin.py  forms.py  models.py  utilits.py  views.py
meetup_site/meetups/static/mysite/css/: styles.css
meetup_site/meetups/templates/mysite/: addpage.html  base.html  contact.html  index.html  list_menu.html  login.html  post.html  register.html
meetup_site/meetups/templatetags/: company_tags.py
