[tool.poetry]
name = "meetup-site"
version = "0.1.0"
description = ""
authors = ["Coriolanus <savvarabota@gmail.com>"]
readme = "README.md"
packages = [{include = "meetup_site"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
